--- a/CSS/style.css
+++ b/CSS/style.css
@@ -305,12 +305,12 @@ section button:hover{background:#3e2a1c;}
 }
 
 #cassino input{
-  width:100%;
+  width:10%;
   padding:8px;
   margin:8px 0;
-  background:#2f1f14;
+  background:#f7f7f7;
   border:1px solid #6b4a33;
-  color:#f5e6c8;
+  color:#181818;
   text-align:center;
 }
 
