--- a/CSS/style.css
+++ b/CSS/style.css
@@ -556,6 +556,7 @@ section button:hover{background:#3e2a1c;}
 
 #localidade-mina{
   background: linear-gradient(180deg, #3a2b1d, #1f140c);
+  margin: 10px 1150px 10px 0;
   border-radius:14px;
   padding:20px;
   box-shadow: inset 0 0 25px rgba(0,0,0,.7);
