--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 #aside-bando{
-  width: 220px;
+  width: 500px;
   background: #1b120c;
   border: 3px solid #5a3e2b;
   color: #cdb892;
@@ -345,7 +345,7 @@ section button:hover{background:#3e2a1c;}
 }
 
 .cassino-display{
-  margin: 10px 1380px 10px 0;
+  margin: auto;
   padding: 15px;
   text-align: center;
   font-size: 32px;
@@ -512,7 +512,7 @@ section button:hover{background:#3e2a1c;}
 
 /* mesa do blackjack */
 #mesa-blackjack{
-  margin: 10px 1070px 10px 0;
+  margin: auto;
   background: radial-gradient(circle at center, #1f6b3a, #0f3d22);
   padding:20px;
   border-radius:16px;
@@ -584,7 +584,7 @@ section button:hover{background:#3e2a1c;}
 
 #localidade-mina{
   background: linear-gradient(180deg, #3a2b1d, #1f140c);
-  margin: 10px 1150px 10px 0;
+  margin: auto;
   border-radius:14px;
   padding:20px;
   box-shadow: inset 0 0 25px rgba(0,0,0,.7);
